--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
 						<div class="image"><img src="images/pic01.jpg" alt="" /></div>
 						<div class="content">
 							<h3>About Me</h3>
-							<p>I am passionate about building excellent website. I specialize in creating effective UI/UX for clients ranging from individuals and small-businesses all the way to large enterprise corporations.</p>
+							<p>I am passionate about building an excellent website. I specialize in creating effective UI/UX for clients ranging from individuals and small-businesses all the way to large enterprise corporations.</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="images/pic02.jpg" alt="" /></div>
 						<div class="content">
 							<h3>Educational Details and Interests.</h3>
-							<p>Graduated from DIT University as a Computer Science Engineer. Currently, I am working as a Full-Stack Programmer Analyst Trainee in Cognizant. I have a keen interest in Data Science field and my aim to work for some big Data Statistic firm.</p>
+							<p>Graduated from DIT University as a Computer Science Engineer. Currently, I am working as a Full-Stack Programmer Analyst Trainee in Cognizant. I have a keen interest in the Data Science field and my aim is to work for some big data analytics firms.</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="images/pic03.jpg" alt="" /></div>
 						<div class="content">
 							<h3> Additional Info</h3>
-							<p>I have completed over 30+ projects including Web Apps, UI/UX and Graphic Designing for clients. I love to see new places and experience the beauty and food.   </p>
+							<p>I have completed over 30+ projects including Web Apps, UI/UX and Graphic Designing for clients. I love to see new places and experience beauty and food.   </p>
 						</div>
 					</section>
 					<section class="special">
